--- a/_html/video.html
+++ b/_html/video.html
@@ -9,6 +9,12 @@
 </head>
 <body class="mdui-theme-primary-indigo">
 
+<style>
+    .dplayer-controller-mask {
+        display: none;
+    }
+</style>
+
 <header id="head" class="mdui-appbar">
     <div class="mdui-toolbar mdui-color-theme">
         <a href="javascript:;" class="mdui-btn mdui-btn-icon"><i class="mdui-icon material-icons">menu</i></a>
@@ -33,14 +39,15 @@
                         </div>
                     </div>
                     <div class="mdui-divider"></div>
-                    <a class="mdui-btn mdui-color-theme mdui-m-t-1" href="javascript:toPlayLastTime()">跳转到上次播放进度</a>
                 </div>
             </div>
         </div>
 
         <div class="mdui-divider mdui-m-b-1" ></div>
-        <div class="mdui-row-xs-12 mdui-hidden-md-up" id="esList-sm">
-            <!--todo 小屏幕 -->
+        <div class="mdui-row-xs-12 mdui-hidden-md-up" style="width: 100%; overflow:scroll;">
+            <div class="mdui-grid-list" style="width: 3000%" id="esList-sm" >
+
+            </div>
         </div>
     </div>
 </div>
