[x] 添加系列 [x] 添加单集

--- a/_html/list.html
+++ b/_html/list.html
@@ -21,6 +21,12 @@
 
 <div id="main" class="mdui-container-fluid" style="padding-top:30px">
     <div class="mdui-container">
+        <div class="mdui-row-xs-12 mdui-hidden-md-down">
+        <div id="admin" class="mdui-float-right" style="display: none">
+            <button class="mdui-btn mdui-color-theme" onclick="addSeries()">添加</button>
+            <div class="mdui-divider"></div>
+        </div>
+        </div>
     <div class="mdui-row-xs-12" id="List">
     </div>
 </div>
