--- a/_html/video.html
+++ b/_html/video.html
@@ -32,6 +32,10 @@
             <div class="mdui-col-md-9 mdui-col-xs-12" id="dplayer"></div>
             <div class="mdui-col-md-3 mdui-hidden-sm-down">
                 <div class="mdui-row-xs-12 mdui-card">
+                    <div id="admin" class="mdui-m-b-1" style="display: none">
+                        <button class="mdui-btn mdui-color-theme" onclick="addEs()">添加</button>
+                        <div class="mdui-divider"></div>
+                    </div>
                     <div class="mdui-m-t-1 mdui-m-l-1">选集</div>
                     <div class="mdui-list-dense">
                         <div class="mdui-divider"></div>
@@ -43,9 +47,9 @@
             </div>
         </div>
 
-        <div class="mdui-divider mdui-m-b-1" ></div>
+        <div class="mdui-divider mdui-m-b-1"></div>
         <div class="mdui-row-xs-12 mdui-hidden-md-up" style="width: 100%; overflow:scroll;">
-            <div class="mdui-grid-list" style="width: 3000%" id="esList-sm" >
+            <div class="mdui-grid-list" style="width: 300%" id="esList-sm" >
 
             </div>
         </div>
